<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>find_document_by_hash_window</class>
 <widget class="QWidget" name="find_document_by_hash_window">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>630</width>
    <height>115</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Find document by hash</string>
  </property>
  <widget class="QLineEdit" name="document_path_line_edit">
   <property name="geometry">
    <rect>
     <x>18</x>
     <y>10</y>
     <width>591</width>
     <height>35</height>
    </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
     <width>0</width>
     <height>35</height>
    </size>
   </property>
   <property name="inputMask">
    <string/>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="echoMode">
    <enum>QLineEdit::Normal</enum>
   </property>
   <property name="readOnly">
    <bool>true</bool>
   </property>
   <property name="placeholderText">
    <string>Document path:</string>
   </property>
  </widget>
  <widget class="QPushButton" name="select_document_button">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>50</y>
     <width>240</width>
     <height>35</height>
    </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
     <width>100</width>
     <height>35</height>
    </size>
   </property>
   <property name="text">
    <string>Select document</string>
   </property>
  </widget>
  <widget class="QPushButton" name="search_document_by_hash_button">
   <property name="geometry">
    <rect>
     <x>370</x>
     <y>50</y>
     <width>240</width>
     <height>35</height>
    </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
     <width>100</width>
     <height>35</height>
    </size>
   </property>
   <property name="text">
    <string>Search</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
